remove last builtins and add new systembuttons plugin
(Old svn revision: 3451)

--- a/configure.ac
+++ b/configure.ac
@@ -78,6 +78,7 @@ plugins/mailcheck/Makefile
 plugins/clock/Makefile
 plugins/trash/Makefile
 plugins/switcher/Makefile
+plugins/systembuttons/Makefile
 themes/Makefile
 themes/Crystal/Makefile
 themes/Curve/Makefile
