--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -134,7 +134,8 @@ SUBDIRS = \
 mailcheck \
 clock \
 trash \
-switcher
+switcher \
+systembuttons
 
 subdir = plugins
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
