--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -156,6 +156,7 @@ main.c \
 main.h \
 panel.c \
 panel.h \
+plugins.h \
 popup.c \
 popup.h \
 settings.c \
@@ -172,6 +173,7 @@ global.h \
 icons.h \
 main.h \
 panel.h \
+plugins.h \
 xfce_support.h \
 xfce.h 
 
