Several fixes: minibuttons position, settings plugin icon and non-modal dialog, netk_pager sizing
(Old svn revision: 3469)

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,7 +1,9 @@
-noinst_DATA = \
+icondir=$(pkgdatadir)/icons
+
+icon_DATA = \
 diag_icon.xpm \
 menu_icon.xpm \
 xfce_icon.xpm \
 xfce_slogan.xpm
 
-EXTRA_DIST = $(noinst_DATA)
+EXTRA_DIST = $(icon_DATA)
