Update dependencies on libxfcegui4 version and libxfce4mcs
(Old svn revision: 3480)

--- a/config.h.in
+++ b/config.h.in
@@ -60,6 +60,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Define libxfce4mcs required version. */
+#undef LIBXFCE4MCS_REQUIRED_VERSION
+
 /* Define libxfcegui4 required version. */
 #undef LIBXFCEGUI4_REQUIRED_VERSION
 
