--- a/configure.ac
+++ b/configure.ac
@@ -43,22 +43,25 @@ AC_ARG_ENABLE(debug,
 GLIB_REQUIRED_VERSION=2.0.0
 GTK_REQUIRED_VERSION=2.0.0
 PANGO_REQUIRED_VERSION=1.0.0
-LIBXFCEGUI4_REQUIRED_VERSION=0.0.7
+LIBXFCEGUI4_REQUIRED_VERSION=0.0.10
+LIBXFCE4MCS_REQUIRED_VERSION=0.0.1
 
 AC_DEFINE_UNQUOTED(GLIB_REQUIRED_VERSION, $GLIB_REQUIRED_VERSION, [Define glib required version.])
 AC_DEFINE_UNQUOTED(GTK_REQUIRED_VERSION, $GTK_REQUIRED_VERSION, [Define gtk required version.])
 AC_DEFINE_UNQUOTED(PANGO_REQUIRED_VERSION, $PANGO_REQUIRED_VERSION, [Define pango required version.])
 AC_DEFINE_UNQUOTED(LIBXFCEGUI4_REQUIRED_VERSION, $LIBXFCEGUI4_REQUIRED_VERSION, [Define libxfcegui4 required version.])
+AC_DEFINE_UNQUOTED(LIBXFCE4MCS_REQUIRED_VERSION, $LIBXFCE4MCS_REQUIRED_VERSION, [Define libxfce4mcs required version.])
 
 AC_SUBST(GLIB_REQUIRED_VERSION)
 AC_SUBST(GTK_REQUIRED_VERSION)
 AC_SUBST(PANGO_REQUIRED_VERSION)
 AC_SUBST(LIBXFCEGUI4_REQUIRED_VERSION)
+AC_SUBST(LIBXFCE4MCS_REQUIRED_VERSION)
 
 PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION gmodule-2.0 libxml-2.0 libxfcegui4-1.0 >= $LIBXFCEGUI4_REQUIRED_VERSION)
 
-PKG_CHECK_MODULES(MCS_CLIENT,  libxfce4mcs-client-1.0)
-PKG_CHECK_MODULES(MCS_MANAGER, libxfce4mcs-manager-1.0)
+PKG_CHECK_MODULES(MCS_CLIENT,  libxfce4mcs-client-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
+PKG_CHECK_MODULES(MCS_MANAGER, libxfce4mcs-manager-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
 
 ## libtool support (for plugins)
 AC_DISABLE_STATIC
