--- a/settings/Makefile.in
+++ b/settings/Makefile.in
@@ -136,7 +136,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-plugindir = $(libdir)/libxfce4mcs/settings/
+plugindir = $(libdir)/xfce-mcs-manager/plugins
 
 plugin_LTLIBRARIES = libxfce4settings.la
 libxfce4settings_la_LDFLAGS = -module -avoid-version
