Add a check for availability of xfce-mcs-manager
(Old svn revision: 3485)

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,7 @@ PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0
 
 PKG_CHECK_MODULES(MCS_CLIENT,  libxfce4mcs-client-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
 PKG_CHECK_MODULES(MCS_MANAGER, libxfce4mcs-manager-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
+PKG_CHECK_MODULES(XFCE_MCS_MANAGER, xfce-mcs-manager = 1)
 
 ## libtool support (for plugins)
 AC_DISABLE_STATIC
