Add french xtion.
(Old svn revision: 3503)

--- a/configure.ac
+++ b/configure.ac
@@ -16,7 +16,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Name of default
 gettext domain])
 
-ALL_LINGUAS="nl es"
+ALL_LINGUAS="nl es fr"
 AM_GLIB_GNU_GETTEXT
 
 AC_PROG_CC
