Fix a bunch of i18n problems: bindtextdomain must be invoked each time a plugin has to display something otherwise other bindtextdomains take precedence and display is not translated anymore...
(Old svn revision: 3505)

--- a/plugins/clock/Makefile.in
+++ b/plugins/clock/Makefile.in
@@ -163,7 +163,7 @@ libclock_la_SOURCES = \
 clock.c
 
 
-libclock_la_CFLAGS = -Wall -I$(top_srcdir) -I$(top_srcdir)/panel  @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
+libclock_la_CFLAGS = -Wall -I$(top_srcdir) -I$(top_srcdir)/panel  @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\" -DLOCALEDIR=\"$(datadir)/locale\"
 libclock_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
 subdir = plugins/clock
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
