--- a/plugins/trash/Makefile.in
+++ b/plugins/trash/Makefile.in
@@ -163,7 +163,7 @@ libtrash_la_SOURCES = \
 trash.c
 
 
-libtrash_la_CFLAGS = -Wall -I$(top_srcdir) -I$(top_srcdir)/panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
+libtrash_la_CFLAGS = -Wall -I$(top_srcdir) -I$(top_srcdir)/panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\" -DLOCALEDIR=\"$(datadir)/locale\"
 libtrash_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
 subdir = plugins/trash
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
