Remove handle.[ch]. Code moved to panel.c.
(Old svn revision: 3518)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -7,11 +7,10 @@ controls_dialog.h \
 global.h \
 groups.c \
 groups.h \
-handle.c \
-handle.h \
 icons.c \
 icons.h \
 info.c \
+info.h \
 item.c \
 item.h \
 item_dialog.c \
